# VectorDraw

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  VectorDraw.cpp  VectorDraw.hpp  VectorDraw.qrc  VectorDraw_pch.hpp  cfg_data_type.hpp  configuration.cpp  configuration.hpp  gen_cmake_vs22_dbg.cmd  painter.hpp  runme.cmd  runme_with_rd_bld.cmd  settings.hpp  util.hpp  vd_items.cpp  vd_items.hpp  vd_layout.cpp  vd_layout.hpp  vd_layout_old.cpp  vd_menu_bar.hpp  vd_settings.hpp  vd_size_edit.cpp  vd_size_edit.hpp  vd_util.hpp  vd_view.cpp  vd_view.hpp  vd_view_canvas.hpp  vd_view_painter.cpp  vd_view_painter.hpp  view.hpp  view_canvas.hpp
VS/: cmake_vs19_dbg.cmd  cmake_vs19_rel.cmd  cmake_vs22_dbg.cmd  cmake_vs22_rel.cmd  gen_cmake_vs19_x64_dbg.cmd  gen_cmake_vs19_x64_rel.cmd  gen_cmake_vs22_x64_dbg.cmd  gen_cmake_vs22_x64_rel.cmd
VS/VectorDraw_VS2019/: VectorDraw_VS2019.sln  VectorDraw_VS2019.vcxproj  VectorDraw_VS2019.vcxproj.filters
VS/VectorDraw_VS2022/: VectorDraw_VS2022.sln  VectorDraw_VS2022.vcxproj
VS2022/: gen_cmake_vs22_dbg.cmd  gen_cmake_vs22_rel.cmd
icons/: icons.txt
